--- a/perso_account_migration/view/migration.xml
+++ b/perso_account_migration/view/migration.xml
@@ -26,7 +26,7 @@
             
    <menuitem
             id="perso_account_migration_menu"
-            parent="base.menu_config"
+            parent="base.menu_administration"
             name="Migrate Perso Account"
             action="odoo_import_form"/>
             
