[ADD] type on period and on report line + [FIX] search cash flow by period + [CLEAN] name of class pep8 compliant

--- a/perso_account/views/period_view.xml
+++ b/perso_account/views/period_view.xml
@@ -6,6 +6,7 @@
         <field name="arch" type="xml">
             <tree string="Period" editable="top">
                 <field name="name" />
+                <field name="type_id" />
                 <field name="date_start" />
                 <field name="date_end" />
                 <field name="previous_period_id" />
