[FIX] New wizard and adapt old wiard to import fortis file, take into account the new easy banking app

--- a/perso_account/wizard/import_fortis.xml
+++ b/perso_account/wizard/import_fortis.xml
@@ -37,7 +37,7 @@
                   
        <menuitem id="perso_account_import_fortis"
                   parent="perso_account_import_parent"
-                  name="Import Fortis"
+                  name="Import Fortis (Old)"
                   action="import_fortis" />
                   
 	</data>
