--- a/perso_account/views/bank_account.xml
+++ b/perso_account/views/bank_account.xml
@@ -6,6 +6,7 @@
         <field name="arch" type="xml">
             <tree string="Bank Account" editable="bottom">
                 <field name="name" />
+                <field name="description" />
             </tree>
         </field>
     </record>
