--- a/perso_account/report/load_chart_of_account_view.xml
+++ b/perso_account/report/load_chart_of_account_view.xml
@@ -8,7 +8,7 @@
             <form string="Load Chart of account" version="7.0">
                 <group>
                     <field name="period_id" />
-                    <field name="bank_id" />
+                    <field name="bank_ids" widget="many2many_tags" />
 
                 </group>
                 <footer>
